--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Header and Footer</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <h3>Seatwork 3</h3>
-    <h1>Header and Footer</h1>
-    <p>This Seatwork is designed to demonstrate the capabilities of HTML and CSS in designing different variations of Headers and Footers</p>
-    <a href="./pages/header-gallery/index.html" class="button">Header</a>
-    <a href="./pages/footer-gallery/index.html" class="button">Footer</a>
+        <h3>Seatwork 3</h3>
+        <h1>Header and Footer</h1>
+        <p>This Seatwork is designed to demonstrate the capabilities of HTML and CSS in designing different variations of Headers and Footers</p>
+        <a href="./pages/header-gallery/index.html" class="button">Header</a>
+        <a href="./pages/footer-gallery/index.html" class="button">Footer</a>
 </body>
 </html>
