--- a/pages/footer-gallery/index.html
+++ b/pages/footer-gallery/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>5 EXAMPLES OF STATIC AND ANIMATED HEADERS</h1>
-    <h2>STATIC HEADERS</h2>
-    <h2>ANIMATED HEADERS</h2>
+    <h1>5 EXAMPLES OF STATIC AND ANIMATED FOOTERS</h1>
+    <h2>STATIC FOOTERS</h2>
+    <h2>ANIMATED FOOTERS</h2>
 </body>
 </html>
