--- a/pages/footer-gallery/index.html
+++ b/pages/footer-gallery/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="../../index.html"><p>RETURN TO HOMEPAGE</p></a>
     <h1>5 EXAMPLES OF STATIC AND ANIMATED FOOTERS</h1>
     <h2>STATIC FOOTERS</h2>
     <h2>ANIMATED FOOTERS</h2>
