--- a/pages/header-gallery/index.html
+++ b/pages/header-gallery/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="../../index.html"><p>RETURN TO HOMEPAGE</p></a>
     <h1>5 EXAMPLES OF STATIC AND ANIMATED HEADERS</h1>
     <h2>STATIC HEADERS</h2>
     <h2>ANIMATED HEADERS</h2>
