Updated Description of Landing Page. Updated readme.md with a Title, Description, and a Guide Section.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
         <h3>Seatwork 3</h3>
         <h1>Header and Footer</h1>
-        <p>This Seatwork is designed to demonstrate the capabilities of HTML and CSS in designing different variations of Headers and Footers</p>
+        <p>This Seatwork Website is designed to demonstrate the capabilities of HTML and CSS in designing different variations of Headers and Footers</p>
         <a href="./pages/header-gallery/index.html" class="button">Header</a>
         <a href="./pages/footer-gallery/index.html" class="button">Footer</a>
 </body>
