Updated style.css for Landing Page.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-        <h3>Seatwork 3</h3>
+        <h3>Seatwork #003</h3>
         <h1>Header and Footer</h1>
+        <br>
         <p>This Seatwork Website is designed to demonstrate the capabilities of HTML and CSS in designing different variations of Headers and Footers</p>
+        <br>
+        <br>
         <a href="./pages/header-gallery/index.html" class="button">Header</a>
         <a href="./pages/footer-gallery/index.html" class="button">Footer</a>
 </body>
