Updated the background of landing page. Added a Stylesheet link for header-gallery and footer-gallery.

--- a/pages/header-gallery/index.html
+++ b/pages/header-gallery/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <a href="../../index.html"><p>RETURN TO HOMEPAGE</p></a>
     <h1>5 EXAMPLES OF STATIC AND ANIMATED HEADERS</h1>
     <h2>STATIC HEADERS</h2>
+    <br>
     <h2>ANIMATED HEADERS</h2>
 </body>
 </html>
