Adding the first Header for header-gallery.

--- a/pages/header-gallery/index.html
+++ b/pages/header-gallery/index.html
@@ -1,16 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
-</head>
-<body>
-    <a href="../../index.html"><p>RETURN TO HOMEPAGE</p></a>
-    <h1>5 EXAMPLES OF STATIC AND ANIMATED HEADERS</h1>
-    <h2>STATIC HEADERS</h2>
-    <br>
-    <h2>ANIMATED HEADERS</h2>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <link rel="stylesheet" href="./assets/css/style.css">
+    </head>
+    <body>
+        <a href="../../index.html"><p>RETURN TO HOMEPAGE</p></a>
+        <h1>5 EXAMPLES OF STATIC AND ANIMATED HEADERS</h1>
+        <h2>STATIC HEADERS</h2>
+        <br>
+        <br>
+        <section class="h-design-one">
+            <h3>
+                Design 1: Top Header with 4 buttons and an image.
+            </h3>
+        </section>
+        <br>
+        <header class ="d-one">
+            <img src="./assets/img/header-logo-1.png" alt="logo-one">
+            <a href="">HOME</a><a href="">ABOUT</a><a href="">PORTFOLIO</a><a href="">CONTACTS</a>
+        </header>
+        <br>
+        <section class="h-design-two">
+            <h3>
+                Design 2: Top Header with 4 buttons and an image.
+            </h3>
+        </section>
+        <br>
+        <header class ="d-two">
+            <img src="" alt="logo-two">
+            <a href="">HOME</a><a href="">ABOUT</a><a href="">PORTFOLIO</a><a href="">CONTACTS</a>
+        </header>
+
+        <br>
+        <br>
+        <h2>ANIMATED HEADERS</h2>
+    </body>
 </html>
