Added header-logo-two.png for the 2nd header.

--- a/pages/header-gallery/index.html
+++ b/pages/header-gallery/index.html
@@ -19,7 +19,7 @@
         </section>
         <br>
         <header class ="d-one">
-            <img src="./assets/img/header-logo-1.png" alt="logo-one">
+            <img src="./assets/img/header-logo-one.png" alt="logo-one">
             <a href="">HOME</a><a href="">ABOUT</a><a href="">PORTFOLIO</a><a href="">CONTACTS</a>
         </header>
         <br>
@@ -30,7 +30,7 @@
         </section>
         <br>
         <header class ="d-two">
-            <img src="" alt="logo-two">
+            <img src="./assets/img/header-logo-two.png" alt="logo-two">
             <a href="">HOME</a><a href="">ABOUT</a><a href="">PORTFOLIO</a><a href="">CONTACTS</a>
         </header>
 
