Updated the first static header design and added the second static header design.

--- a/pages/header-gallery/index.html
+++ b/pages/header-gallery/index.html
@@ -14,7 +14,7 @@
         <br>
         <section class="h-design-one">
             <h3>
-                Design 1: Top Header with 4 buttons and an image.
+                Design 1: Top Header with 4 buttons and an image to the left.
             </h3>
         </section>
         <br>
@@ -25,14 +25,17 @@
         <br>
         <section class="h-design-two">
             <h3>
-                Design 2: Top Header with 4 buttons and an image.
+                Design 2: Top Header with 4 buttons and an image in the center.
             </h3>
         </section>
         <br>
         <header class ="d-two">
+            <a href="">HOME</a><a href="">ABOUT</a>
             <img src="./assets/img/header-logo-two.png" alt="logo-two">
-            <a href="">HOME</a><a href="">ABOUT</a><a href="">PORTFOLIO</a><a href="">CONTACTS</a>
+            <a href="">PORTFOLIO</a><a href="">CONTACTS</a>
         </header>
+
+        <section class="h-design-three"></section>
 
         <br>
         <br>
