--- a/pages/header-gallery/index.html
+++ b/pages/header-gallery/index.html
@@ -12,30 +12,30 @@
         <h2>STATIC HEADERS</h2>
         <br>
         <br>
-        <section class="h-design-one">
+        <section class="h-s-design-one">
             <h3>
                 Design 1: Top Header with 4 buttons and an image to the left.
             </h3>
         </section>
         <br>
-        <header class ="d-one">
+        <header class ="d-s-one">
             <img src="./assets/img/header-logo-one.png" alt="logo-one">
             <a href="">HOME</a><a href="">ABOUT</a><a href="">PORTFOLIO</a><a href="">CONTACTS</a>
         </header>
         <br>
-        <section class="h-design-two">
+        <section class="h-s-design-two">
             <h3>
                 Design 2: Top Header with 4 buttons and an image in the center.
             </h3>
         </section>
         <br>
-        <header class ="d-two">
+        <header class ="d-s-two">
             <a href="">HOME</a><a href="">ABOUT</a>
             <img src="./assets/img/header-logo-two.png" alt="logo-two">
             <a href="">PORTFOLIO</a><a href="">CONTACTS</a>
         </header>
 
-        <section class="h-design-three"></section>
+        <section class="h-s-design-three"></section>
 
         <br>
         <br>
