Created the third static header design.

--- a/pages/header-gallery/index.html
+++ b/pages/header-gallery/index.html
@@ -14,7 +14,7 @@
         <br>
         <section class="h-s-design-one">
             <h3>
-                Design 1: Top Header with 4 buttons and an image to the left.
+                Design 1: Top Header with 4 buttons and the logo to the left.
             </h3>
         </section>
         <br>
@@ -25,7 +25,7 @@
         <br>
         <section class="h-s-design-two">
             <h3>
-                Design 2: Top Header with 4 buttons and an image in the center.
+                Design 2: Top Header with 4 buttons and the logo in the center.
             </h3>
         </section>
         <br>
@@ -35,8 +35,21 @@
             <a href="">PORTFOLIO</a><a href="">CONTACTS</a>
         </header>
 
-        <section class="h-s-design-three"></section>
-
+        <section class="h-s-design-three">
+            <h3>
+                Design 3: Top Header with 3 buttons, a logo, and a username icon.
+            </h3>
+        </section>
+        <br>
+        <header class="d-s-three">
+            <div class = "image">
+                <img src="./assets/img/header-logo-three.png" alt="">
+            </div>
+            <div class="buttons">
+                <a href="">HOME</a><a href="">ABOUT</a><a href="">DEMO</a>
+                <img src="./assets/img/header-logo-three-icon.png" alt="">
+            </div>
+        </header>
         <br>
         <br>
         <h2>ANIMATED HEADERS</h2>
