Turned the Icon logo into a hyperlink button.

--- a/pages/header-gallery/index.html
+++ b/pages/header-gallery/index.html
@@ -46,8 +46,7 @@
             </div>
             <div class="buttons">
                 <a href="">HOME</a><a href="">ABOUT</a><a href="">DEMO</a>
-                <img src="./assets/img/header-logo-three-icon.png" alt="">
-            </div>
+                <a href=""><img src="./assets/img/header-logo-three-icon.png" alt=""></a>
         </header>
         <br>
         <br>
