Created the fourth and fifth Header designs. Updated a bit of style.css.

--- a/pages/header-gallery/index.html
+++ b/pages/header-gallery/index.html
@@ -25,14 +25,13 @@
         <br>
         <section class="h-s-design-two">
             <h3>
-                Design 2: Top Header with 4 buttons and the logo in the center.
+                Design 2: Top Header with 4 buttons and the logo in the center of the four buttons.
             </h3>
         </section>
         <br>
         <header class ="d-s-two">
-            <a href="">HOME</a><a href="">ABOUT</a>
             <img src="./assets/img/header-logo-two.png" alt="logo-two">
-            <a href="">PORTFOLIO</a><a href="">CONTACTS</a>
+            <a href="">HOME</a><a href="">ABOUT</a><a href="">PORTFOLIO</a><a href="">CONTACTS</a>
         </header>
         <br>
         <section class="h-s-design-three">
@@ -42,14 +41,37 @@
         </section>
         <header class="d-s-three">
             <div class = "image">
-                <img src="./assets/img/header-logo-three.png" alt="">
+                <img src="./assets/img/header-logo-three.png" alt="logo-three">
             </div>
             <div class="buttons">
-                <a href="">HOME</a><a href="">ABOUT</a><a href="">DEMO</a>
+                <a href="">HOME</a><a href="">ABOUT</a><a href="">FREE DEMO</a>
                 <a href=""><img src="./assets/img/header-logo-three-icon.png" alt=""></a>
         </header>
         <br>
         <br>
+        <section class="h-s-design-four">
+            <h3>
+                Design 4: Top Header with a Logo and 4 icons as buttons.
+            </h3>
+        </section>
+        <header class="d-s-four">
+            <a href=""><img src="./assets/img/header-logo-four-icon-home.png" alt="" width="75" height="75"></a>
+            <a href=""><img src="./assets/img/header-logo-four-icon-question.png" alt="" width="75" height="75"></a>
+            <a href=""><img src="./assets/img/header-logo-four.png" alt="" width="75" height="75"></a>
+            <a href=""><img src="./assets/img/header-logo-four-icon-email.png" alt="" width="75" height="75"></a>
+            <a href=""><img src="./assets/img/header-logo-four-icon-shop.png" alt="" width="75" height="75"></a>
+        </header>
+        <br>
+        <br>
+        <section class="h-s-design-five">
+            <h3>
+                Design 5: Top Header with a Logo and 1 menu icon button.
+            </h3>
+        </section>
+        <header class="d-s-five">
+            <a href=""><img class="logo-image"src="./assets/img/header-logo-five.png" alt="" width="75" height="75"></a>
+            <a href=""><img class="menu-image"src="./assets/img/header-logo-five-menu.png" alt="" width="75" height="75"></a>
+        </header>
         <h2>ANIMATED HEADERS</h2>
     </body>
 </html>
