Added an Animated Header Design.

--- a/pages/header-gallery/index.html
+++ b/pages/header-gallery/index.html
@@ -13,7 +13,6 @@
         <br>
         <br>
         <br>
-        <br>
         <section class="h-s-design-one">
             <h3>
                 Design 1: Top Header with 4 buttons and the logo to the left.
@@ -83,5 +82,26 @@
         <br>
         <br>
         <h2>ANIMATED HEADERS</h2>
+        <br>
+        <br>
+        <br>
+        <section class="h-a-design-one">
+            <h3>
+                Design 1: Top Header with 4 buttons and the logo to the left. <br>
+                Animation: Text Background Color Hover, Background color manipulation, Image Manipulation.
+            </h3>
+        </section>
+        <header class="d-a-one">
+                    <img src="./assets/img/header-logo-one.png" alt="logo-one" class="animated-logo-one">
+                    <a href="">HOME</a><a href="">ABOUT</a><a href="">PORTFOLIO</a><a href="">CONTACTS</a>
+        </header>
+        <br>
+        <br>
+        <section class="h-a-design-two">
+
+        </section>
+        <header class="d-a-two">
+
+        </header>
     </body>
 </html>
