--- a/pages/header-gallery/index.html
+++ b/pages/header-gallery/index.html
@@ -15,7 +15,7 @@
         <br>
         <section class="h-s-design-one">
             <h3>
-                Design 1: Top Header with 4 buttons and the logo to the left.
+                Design 1: Top Header with the logo to the left, and 4 buttons spread out.
             </h3>
         </section>
         <br>
@@ -27,7 +27,7 @@
         <br>
         <section class="h-s-design-two">
             <h3>
-                Design 2: Top Header with 4 buttons and the logo in the center of the four buttons.
+                Design 2: Top Header with 4 buttons and the logo to the left.
             </h3>
         </section>
         <br>
@@ -98,10 +98,14 @@
         <br>
         <br>
         <section class="h-a-design-two">
-
+            <h3>
+                Design 2: Top Header with 4 buttons and the logo in the center of the four buttons. <br>
+                Animation: Background Color Manipulation through Hover
+            </h3>
         </section>
         <header class="d-a-two">
-
+            <img src="./assets/img/header-logo-two.png" alt="logo-two">
+            <a href="">HOME</a><a href="">ABOUT</a><a href="">PORTFOLIO</a><a href="">CONTACTS</a>
         </header>
     </body>
 </html>
