Added the third Animated Header Design.

--- a/pages/header-gallery/index.html
+++ b/pages/header-gallery/index.html
@@ -7,7 +7,12 @@
         <link rel="stylesheet" href="./assets/css/style.css">
     </head>
     <body>
+        <br>
+        <br>
+        <br>
         <a href="../../index.html"><p>RETURN TO HOMEPAGE</p></a>
+        <br>
+        <br>
         <h1>5 EXAMPLES OF STATIC AND ANIMATED HEADERS</h1>
         <h2>STATIC HEADERS</h2>
         <br>
@@ -107,5 +112,24 @@
             <img src="./assets/img/header-logo-two.png" alt="logo-two">
             <a href="">HOME</a><a href="">ABOUT</a><a href="">PORTFOLIO</a><a href="">CONTACTS</a>
         </header>
+        <br>
+        <br>
+        <section class="h-a-design-three">
+            <h3>
+                Design 3: Top Header with 3 buttons, a logo, and a username icon. <br>
+                Animation: Logo change through hover. Image and Icon scale through hover.
+            </h3>
+        </section>
+        <header class="d-a-three">
+            <div class = "image">
+                <img src="./assets/img/header-logo-three.png" alt="logo-three" class="animated-logo-three">
+                <img src="./assets/img/header-logo-three-hover.png" alt="logo-three" class="animated-logo-three-hover">
+            </div>
+            <div class="buttons">
+                <a href="">HOME</a><a href="">ABOUT</a><a href="">FREE DEMO</a>
+                <a href=""><img src="./assets/img/header-logo-three-icon.png" alt=""></a>
+        </header>
+        <br>
+        <br>
     </body>
 </html>
