1. Modified the table of contents for readme.md 2. Added a 4th Animated Header design. 3. modified already existing animated header designs.

--- a/pages/header-gallery/index.html
+++ b/pages/header-gallery/index.html
@@ -131,5 +131,20 @@
         </header>
         <br>
         <br>
+        <section class="h-a-design-four">
+            <h3>
+                Design 4: Top Header with a Logo and 4 icons as buttons.
+            </h3>
+        </section>
+        <br>
+        <header class="d-a-four">
+            <a href=""><img src="./assets/img/header-logo-four-icon-home.png" alt="" width="75" height="75"></a>
+            <a href=""><img src="./assets/img/header-logo-four-icon-question.png" alt="" width="75" height="75"></a>
+            <a href=""><img src="./assets/img/header-logo-four.png" alt="" width="75" height="75"></a>
+            <a href=""><img src="./assets/img/header-logo-four-icon-email.png" alt="" width="75" height="75"></a>
+            <a href=""><img src="./assets/img/header-logo-four-icon-shop.png" alt="" width="75" height="75"></a>
+        </header>
+        <br>
+        <br>
     </body>
 </html>
