Updated the animation for the 4th animated header  design.  Updated the type of animation for the 4th animated  header design in index.html.

--- a/pages/header-gallery/index.html
+++ b/pages/header-gallery/index.html
@@ -134,15 +134,16 @@
         <section class="h-a-design-four">
             <h3>
                 Design 4: Top Header with a Logo and 4 icons as buttons.
+                Animation: Logo and the symbols will change their size if cursor is hovering them.
             </h3>
         </section>
         <br>
         <header class="d-a-four">
-            <a href=""><img src="./assets/img/header-logo-four-icon-home.png" alt="" width="75" height="75"></a>
-            <a href=""><img src="./assets/img/header-logo-four-icon-question.png" alt="" width="75" height="75"></a>
-            <a href=""><img src="./assets/img/header-logo-four.png" alt="" width="75" height="75"></a>
-            <a href=""><img src="./assets/img/header-logo-four-icon-email.png" alt="" width="75" height="75"></a>
-            <a href=""><img src="./assets/img/header-logo-four-icon-shop.png" alt="" width="75" height="75"></a>
+            <a href=""><img src="./assets/img/header-logo-four-icon-home.png" alt="" width="75" height="75" class="symbol-home"></a>
+            <a href=""><img src="./assets/img/header-logo-four-icon-question.png" alt="" width="75" height="75" class="symbol-about"></a>
+            <a href=""><img src="./assets/img/header-logo-four.png" alt="" width="75" height="75" class="main-logo"></a>
+            <a href=""><img src="./assets/img/header-logo-four-icon-email.png" alt="" width="75" height="75" class="symbol-email"></a>
+            <a href=""><img src="./assets/img/header-logo-four-icon-shop.png" alt="" width="75" height="75" class="symbol-shop"></a>
         </header>
         <br>
         <br>
