Added the basis for the final Animated Header design.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="./assets/css/style.css">
     </head>
     <body>
-            <h3>Seatwork #003</h3>
+            <h3>Seatwork 3</h3>
             <h1>Header and Footer</h1>
             <br>
             <p>This Seatwork Website is designed to demonstrate the capabilities of HTML and CSS in designing different variations of Headers and Footers</p>
