--- a/pages/header-gallery/index.html
+++ b/pages/header-gallery/index.html
@@ -147,5 +147,19 @@
         </header>
         <br>
         <br>
+        <section class="h-a-design-five">
+            <h3>
+                Design 5: Top Header with a Logo and 1 menu icon button.
+            </h3>
+        </section>
+        <br>
+        <header class="d-a-five">
+            <a href=""><img class="logo-image"src="./assets/img/header-logo-five.png" alt="" width="75" height="75"></a>
+            <a href=""><img class="menu-image"src="./assets/img/header-logo-five-menu.png" alt="" width="75" height="75"></a>
+        </header>
+        <br>
+        <br>
+        <br>
+        <br>
     </body>
 </html>
