Modified The third Header design for better maintenance.

--- a/pages/header-gallery/index.html
+++ b/pages/header-gallery/index.html
@@ -48,12 +48,11 @@
             </h3>
         </section>
         <header class="d-s-three">
-            <div class = "image">
-                <img src="./assets/img/header-logo-three.png" alt="logo-three">
-            </div>
-            <div class="buttons">
+            <div class = "items">
+                <img class = "logo" src="./assets/img/header-logo-three.png" alt="logo-three">
                 <a href="">HOME</a><a href="">ABOUT</a><a href="">FREE DEMO</a>
-                <a href=""><img src="./assets/img/header-logo-three-icon.png" alt=""></a>
+                <a href=""><img class = "icon" src="./assets/img/header-logo-three-icon.png" alt=""></a>
+            </div>
         </header>
         <br>
         <br>
@@ -79,8 +78,10 @@
         </section>
         <br>
         <header class="d-s-five">
-            <a href=""><img class="logo-image"src="./assets/img/header-logo-five.png" alt="" width="75" height="75"></a>
-            <a href=""><img class="menu-image"src="./assets/img/header-logo-five-menu.png" alt="" width="75" height="75"></a>
+            <div class="symbols">
+                <a href=""><img class= "logo-image" src="./assets/img/header-logo-five.png" alt="" width="75" height="75"></a>
+                <a href=""><img class= "menu-image" src="./assets/img/header-logo-five-menu.png" alt="" width="75" height="75"></a>
+            </div>
         </header>
         <br>
         <br>
@@ -121,13 +122,12 @@
             </h3>
         </section>
         <header class="d-a-three">
-            <div class = "image">
-                <img src="./assets/img/header-logo-three.png" alt="logo-three" class="animated-logo-three">
-                <img src="./assets/img/header-logo-three-hover.png" alt="logo-three" class="animated-logo-three-hover">
-            </div>
-            <div class="buttons">
+            <div class = "items">
+                <img class="logo" src="./assets/img/header-logo-three.png" alt="logo-three">
+                <img class="animated-logo" src="./assets/img/header-logo-three-hover.png" alt="hover-three">
                 <a href="">HOME</a><a href="">ABOUT</a><a href="">FREE DEMO</a>
-                <a href=""><img src="./assets/img/header-logo-three-icon.png" alt=""></a>
+                <a href=""><img class = "icon" src="./assets/img/header-logo-three-icon.png" alt=""></a>
+            </div>
         </header>
         <br>
         <br>
@@ -154,8 +154,11 @@
         </section>
         <br>
         <header class="d-a-five">
-            <a href=""><img class="logo-image"src="./assets/img/header-logo-five.png" alt="" width="75" height="75"></a>
-            <a href=""><img class="menu-image"src="./assets/img/header-logo-five-menu.png" alt="" width="75" height="75"></a>
+            <div class="symbols">
+                <a href=""><img class= "logo-image" src="./assets/img/header-logo-five.png" alt="" width="75" height="75"></a>
+                <p>WELCOME</p>
+                <a href=""><img class= "menu-image" src="./assets/img/header-logo-five-menu.png" alt="" width="75" height="75"></a>
+            </div>
         </header>
         <br>
         <br>
