1. Updated The Animations for the 5th Header Design. 2. Made the transitions faster for some of the header designs. 3. Added new references in readme.md.

--- a/pages/header-gallery/index.html
+++ b/pages/header-gallery/index.html
@@ -133,7 +133,7 @@
         <br>
         <section class="h-a-design-four">
             <h3>
-                Design 4: Top Header with a Logo and 4 icons as buttons.
+                Design 4: Top Header with a Logo and 4 icons as buttons. <br>
                 Animation: Logo and the symbols will change their size if cursor is hovering them.
             </h3>
         </section>
@@ -149,14 +149,15 @@
         <br>
         <section class="h-a-design-five">
             <h3>
-                Design 5: Top Header with a Logo and 1 menu icon button.
+                Design 5: Top Header with a Logo and 1 menu icon button. <br>
+                Animation: Rotating Icons, Secret message appearing when hovering the center.
             </h3>
         </section>
         <br>
         <header class="d-a-five">
             <div class="symbols">
                 <a href=""><img class= "logo-image" src="./assets/img/header-logo-five.png" alt="" width="75" height="75"></a>
-                <p>WELCOME</p>
+                <a href=""><p>WELCOME</p></a>
                 <a href=""><img class= "menu-image" src="./assets/img/header-logo-five-menu.png" alt="" width="75" height="75"></a>
             </div>
         </header>
