Added a static footer design.

--- a/pages/footer-gallery/index.html
+++ b/pages/footer-gallery/index.html
@@ -7,9 +7,51 @@
         <link rel="stylesheet" href="./assets/css/style.css">
     </head>
     <body>
+        <br>
+        <br>
+        <br>
         <a href="../../index.html"><p>RETURN TO HOMEPAGE</p></a>
+        <br>
+        <br>
         <h1>5 EXAMPLES OF STATIC AND ANIMATED FOOTERS</h1>
         <h2>STATIC FOOTERS</h2>
+        <br>
+        <br>
+        <br>
+        <section class="f-s-design-one">
+            <h3>
+                Design 1: Footer divided into 3 parts. Email, Phone number, and Address.
+            </h3>
+        </section>
+        <br>
+        <footer class="d-s-one">
+            <div class="column">
+                <h4>
+                EMAIL:
+                </h4>
+                <p>
+                    blahblahblah@gmail.com
+                </p>
+            </div>
+            <div class="column">
+                <h4>
+                    Contact Number:
+                </h4>
+                <p>
+                    0-912-345-6789
+                </p>
+            </div>
+            <div class="column">
+                <h4>
+                    Address:
+                </h4>
+                <p>
+                    Purgatory Avenue, Slaughter Street.
+                </p>
+            </div>
+        </footer>
+        <br>
+        <br>
         <h2>ANIMATED FOOTERS</h2>
     </body>
 </html>
