1. Created the second Footer design. 2. Cleaned up the Header gallery's section lines. 3. Added an img folder for the Footer Gallery.

--- a/pages/header-gallery/index.html
+++ b/pages/header-gallery/index.html
@@ -18,7 +18,7 @@
         <br>
         <br>
         <br>
-        <section class="h-s-design-one">
+        <section class="h-s-design">
             <h3>
                 Design 1: Top Header with the logo to the left, and 4 buttons spread out.
             </h3>
@@ -30,7 +30,7 @@
         </header>
         <br>
         <br>
-        <section class="h-s-design-two">
+        <section class="h-s-design">
             <h3>
                 Design 2: Top Header with 4 buttons and the logo to the left.
             </h3>
@@ -42,7 +42,7 @@
         </header>
         <br>
         <br>
-        <section class="h-s-design-three">
+        <section class="h-s-design">
             <h3>
                 Design 3: Top Header with 3 buttons, a logo, and a username icon.
             </h3>
@@ -56,7 +56,7 @@
         </header>
         <br>
         <br>
-        <section class="h-s-design-four">
+        <section class="h-s-design">
             <h3>
                 Design 4: Top Header with a Logo and 4 icons as buttons.
             </h3>
@@ -71,7 +71,7 @@
         </header>
         <br>
         <br>
-        <section class="h-s-design-five">
+        <section class="h-s-design">
             <h3>
                 Design 5: Top Header with a Logo and 1 menu icon button.
             </h3>
@@ -91,7 +91,7 @@
         <br>
         <br>
         <br>
-        <section class="h-a-design-one">
+        <section class="h-a-design">
             <h3>
                 Design 1: Top Header with 4 buttons and the logo to the left. <br>
                 Animation: Text Background Color Hover, Background color manipulation, Image Manipulation.
@@ -103,7 +103,7 @@
         </header>
         <br>
         <br>
-        <section class="h-a-design-two">
+        <section class="h-a-design">
             <h3>
                 Design 2: Top Header with 4 buttons and the logo in the center of the four buttons. <br>
                 Animation: Background Color Manipulation through Hover
@@ -115,7 +115,7 @@
         </header>
         <br>
         <br>
-        <section class="h-a-design-three">
+        <section class="h-a-design">
             <h3>
                 Design 3: Top Header with 3 buttons, a logo, and a username icon. <br>
                 Animation: Logo change through hover. Image and Icon scale through hover.
@@ -131,7 +131,7 @@
         </header>
         <br>
         <br>
-        <section class="h-a-design-four">
+        <section class="h-a-design">
             <h3>
                 Design 4: Top Header with a Logo and 4 icons as buttons. <br>
                 Animation: Logo and the symbols will change their size if cursor is hovering them.
@@ -147,7 +147,7 @@
         </header>
         <br>
         <br>
-        <section class="h-a-design-five">
+        <section class="h-a-design">
             <h3>
                 Design 5: Top Header with a Logo and 1 menu icon button. <br>
                 Animation: Rotating Icons, Secret message appearing when hovering the center.
