--- a/pages/footer-gallery/index.html
+++ b/pages/footer-gallery/index.html
@@ -18,7 +18,7 @@
         <br>
         <br>
         <br>
-        <section class="f-s-design-one">
+        <section class="f-s-design">
             <h3>
                 Design 1: Footer divided into 3 parts. Email, Phone number, and Address.
             </h3>
@@ -52,6 +52,37 @@
         </footer>
         <br>
         <br>
+        <section class="f-s-design">
+            <h3>
+                Design 2: Footer that is divided into 2, the logo and the other info.
+            </h3>
+        </section>
+        <footer class="d-s-two">
+            <div class="left">
+                <img src="./assets/img/footer-logo-two.png" alt="">
+            </div>
+            <div class="right">
+                <h4>
+                    EMAIL:
+                </h4>
+                <p>
+                    blahblahblah@gmail.com
+                </p>
+                <h4>
+                    Contact Number:
+                </h4>
+                <p>
+                    0-912-345-6789
+                </p>
+                <h4>
+                    Address:
+                </h4>
+                <p>
+                    Purgatory Avenue, Slaughter Street.
+                </p>
+            </div>
+            </div>
+        </footer>
         <h2>ANIMATED FOOTERS</h2>
     </body>
 </html>
