Added the template for the third footer design.

--- a/pages/footer-gallery/index.html
+++ b/pages/footer-gallery/index.html
@@ -83,6 +83,16 @@
             </div>
             </div>
         </footer>
+        <br>
+        <br>
+        <section class="f-s-design">
+            <h3>
+                Design 3: Footer with a small description and social media buttons in the bottom.
+            </h3>
+        </section>
+        <footer class="d-s-three">
+
+        </footer>
         <h2>ANIMATED FOOTERS</h2>
     </body>
 </html>
