1. Adjusted one of the heading for readme.md 2. Created the third footer design. 3. Added icon images for the footer designs.

--- a/pages/footer-gallery/index.html
+++ b/pages/footer-gallery/index.html
@@ -91,7 +91,17 @@
             </h3>
         </section>
         <footer class="d-s-three">
-
+            <div class="dscrpt">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
+                    pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </p>
+            </div>
+            <div class="scmi">
+                <a href=""><img class="facebook" src="./assets/img/footer-facebook-icon.png" alt=""></a>
+                <a href=""><img class="twitter" src="./assets/img/footer-twitter-icon.png" alt=""></a>
+            </div>
         </footer>
         <h2>ANIMATED FOOTERS</h2>
     </body>
