1. Added another reference in readme.md 2. Revised The footer designs by adding a copyright. 3. Improved upon the 3rd Header Design.

--- a/pages/footer-gallery/index.html
+++ b/pages/footer-gallery/index.html
@@ -27,28 +27,22 @@
         <footer class="d-s-one">
             <div class="column">
                 <h4>
-                EMAIL:
+                EMAIL: blahblahblah@gmail.com
                 </h4>
-                <p>
-                    blahblahblah@gmail.com
-                </p>
             </div>
             <div class="column">
                 <h4>
-                    Contact Number:
+                Contact Number: 0-912-345-6789
                 </h4>
-                <p>
-                    0-912-345-6789
-                </p>
             </div>
             <div class="column">
                 <h4>
-                    Address:
+                Address: Purgatory Avenue, Slaughter Street.
                 </h4>
-                <p>
-                    Purgatory Avenue, Slaughter Street.
-                </p>
             </div>
+            <br>
+            <p>Copyright &copy;2024; Designed by <span class="designer">Lopez</span></p>
+            <br>
         </footer>
         <br>
         <br>
@@ -58,30 +52,32 @@
             </h3>
         </section>
         <footer class="d-s-two">
-            <div class="left">
-                <img src="./assets/img/footer-logo-two.png" alt="">
+            <div class="separation">
+                <div class="left">
+                    <img src="./assets/img/footer-logo-two.png" alt="">
+                </div>
+                <div class="right">
+                    <h4>
+                        EMAIL:
+                    </h4>
+                    <p>
+                        blahblahblah@gmail.com
+                    </p>
+                    <h4>
+                        Contact Number:
+                    </h4>
+                    <p>
+                        0-912-345-6789
+                    </p>
+                    <h4>
+                        Address:
+                    </h4>
+                    <p>
+                        Purgatory Avenue, Slaughter Street.
+                    </p>
+                </div>
             </div>
-            <div class="right">
-                <h4>
-                    EMAIL:
-                </h4>
-                <p>
-                    blahblahblah@gmail.com
-                </p>
-                <h4>
-                    Contact Number:
-                </h4>
-                <p>
-                    0-912-345-6789
-                </p>
-                <h4>
-                    Address:
-                </h4>
-                <p>
-                    Purgatory Avenue, Slaughter Street.
-                </p>
-            </div>
-            </div>
+            <p>Copyright &copy;2024; Designed by <span class="designer">Lopez</span></p>
         </footer>
         <br>
         <br>
@@ -98,10 +94,20 @@
                     pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
             </div>
+            <br>
             <div class="scmi">
                 <a href=""><img class="facebook" src="./assets/img/footer-facebook-icon.png" alt=""></a>
                 <a href=""><img class="twitter" src="./assets/img/footer-twitter-icon.png" alt=""></a>
             </div>
+        <p>Copyright &copy;2024; Designed by <span class="designer">Lopez</span></p>
+        </footer>
+        <section class="class">
+            <h3>
+                Design 4: Footer with a small description and social media buttons in the bottom.
+            </h3>
+        </section>
+        <footer class="d-s-four">
+
         </footer>
         <h2>ANIMATED FOOTERS</h2>
     </body>
