--- a/pages/footer-gallery/index.html
+++ b/pages/footer-gallery/index.html
@@ -89,9 +89,8 @@
         <footer class="d-s-three">
             <div class="dscrpt">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
-                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
-                    pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. .
                 </p>
             </div>
             <br>
@@ -99,15 +98,38 @@
                 <a href=""><img class="facebook" src="./assets/img/footer-facebook-icon.png" alt=""></a>
                 <a href=""><img class="twitter" src="./assets/img/footer-twitter-icon.png" alt=""></a>
             </div>
-        <p>Copyright &copy;2024; Designed by <span class="designer">Lopez</span></p>
+            <p>Copyright &copy;2024; Designed by <span class="designer">Lopez</span></p>
         </footer>
-        <section class="class">
+        <br>
+        <br>
+        <section class="f-s-design">
             <h3>
-                Design 4: Footer with a small description and social media buttons in the bottom.
+                Design 4: Footer divided into three parts. Services, About us, and the logo.
             </h3>
         </section>
         <footer class="d-s-four">
-
+            <p>Copyright &copy;2024; Designed by <span class="designer">Lopez</span></p>
+            <div class="sections">
+                <div class="section-one">
+                    <h4>Services</h4>
+                    <a href="">E-Mail</a>
+                    <br>
+                    <a href="">Contact Information</a>
+                    <br>
+                    <a href="">Location of Headquarters</a>
+                </div>
+                <div class="section-two">
+                    <h4>About us</h4>
+                    <a href="">History</a>
+                    <br>
+                    <a href="">Team Members</a>
+                    <br>
+                    <a href="">Vision</a>
+                </div>
+                <div class="section-three">
+                    <img src="./assets/img/footer-logo-four.png" alt="">
+                </div>                
+            </div>
         </footer>
         <h2>ANIMATED FOOTERS</h2>
     </body>
