--- a/pages/footer-gallery/index.html
+++ b/pages/footer-gallery/index.html
@@ -128,8 +128,16 @@
                 </div>
                 <div class="section-three">
                     <img src="./assets/img/footer-logo-four.png" alt="">
-                </div>                
+                </div>
             </div>
+        </footer>
+        <section class="f-s-design">
+            <h3>
+                Design 5: Footer
+            </h3>
+        </section>
+        <footer class="d-s-five">
+
         </footer>
         <h2>ANIMATED FOOTERS</h2>
     </body>
