--- a/pages/footer-gallery/index.html
+++ b/pages/footer-gallery/index.html
@@ -90,7 +90,7 @@
             <div class="dscrpt">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. .
+                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 </p>
             </div>
             <br>
@@ -133,11 +133,25 @@
         </footer>
         <section class="f-s-design">
             <h3>
-                Design 5: Footer
+                Design 5: Footer with a logo, description, and Social Media icons.
             </h3>
         </section>
         <footer class="d-s-five">
-
+            <div class="sections">
+            <div class="section-one">
+                <img src="./assets/img/footer-logo-five.png" alt="">
+            </div>
+            <div class="section-two">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Yeah you know the rest of the text.
+                </p>
+            </div>
+            <div class="section-three">
+                <a href=""><img src="./assets/img/footer-facebook-icon.png" alt=""></a>
+                <a href=""><img src="./assets/img/footer-twitter-icon.png" alt=""></a>
+            </div>
+            </div>
+            <p>Copyright &copy;2024; Designed by <span class="designer">Lopez</span></p>
         </footer>
         <h2>ANIMATED FOOTERS</h2>
     </body>
