Added the Animations of all of the Footer designs.

--- a/pages/footer-gallery/index.html
+++ b/pages/footer-gallery/index.html
@@ -165,8 +165,8 @@
         <br>
         <section class="f-design">
             <h3>
-                Design 1: Footer divided into 3 parts. Email, Phone number, and Address.
-                Animation: Hovering over the Footer will show the information.
+                Design 1: Footer divided into 3 parts. Email, Phone number, and Address. <br>
+                Animation: Hovering over the Footer will show the information and the color.
             </h3>
         </section>
         <footer class="d-a-one">
@@ -195,7 +195,7 @@
         <br>
         <section class="f-design">
             <h3>
-                Design 2: Footer that is divided into 2, the logo and the other info.
+                Design 2: Footer that is divided into 2, the logo and the other info. <br>
                 Animation: Hovering over the logo will make it glow.
             </h3>
         </section>
@@ -231,7 +231,7 @@
         <br>
         <section class="f-design">
             <h3>
-                Design 3: Footer with a small description and social media buttons in the bottom.
+                Design 3: Footer with a small description and social media buttons in the bottom. <br>
                 Animation: Hovering over will make the background colors change.
         </section>
         <footer class="d-a-three">
@@ -252,8 +252,8 @@
         <br>
         <section class="f-design">
             <h3>
-                Design 4: Footer divided into three parts. Services, About us, and the logo.
-                Animation: Hovering over will reveal the background image. Same can be said about the logo
+                Design 4: Footer divided into three parts. Services, About us, and the logo. <br>
+                Animation: Hovering over will reveal the background image. Hovering over the buttons will highlight the text.
             </h3>
         </section>
 
@@ -285,8 +285,8 @@
         <br>
         <section class="f-design">
             <h3>
-                Design 5: Footer with a logo, description, and Social Media icons.
-                Animation: Hovering over the logo will make it glow.
+                Design 5: Footer with a logo, description, and Social Media icons. <br>
+                Animation: Hovering over the logo will rotate it.
             </h3>
         </section>
         <footer class="d-a-five">
